results/SpecGenBench/2-shot/log-MinInArray-2023_11_28_11_34_30.txt
class MinInArray {
    //@ requires arr != null;
    //@ ensures arr.length == 0 ==> \result == -1;
    //@ ensures (\forall int i; 0 <= i && i < arr.length; arr[i] >= \result);
    public int minElementInArray(int[] arr) {
        if (arr.length == 0) return -1;
        int res = Integer.MIN_VALUE;
        //@ maintaining (\forall int i; 0 <= i && i < arr.length; arr[i] >= res);
        //@ maintaining 0 <= i && i <= arr.length;
        //@ decreases arr.length - i;
        for(int i = 0; i < arr.length; i++) {
            res = ((arr[i] < res) ? arr[i] : res);
        }
        return res;
    }
}
/home/max/Documents/JMLGPT/tmp/MinInArray.java:8: error: variable i is already defined in method minElementInArray(int[])
        //@ maintaining (\forall int i; 0 <= i && i < arr.length; arr[i] >= res);
                                     ^
1 error

